refactor: improve item and recipe management
- Replace static `Items` utility with `ItemBuilder` and `WeaponBuilder`
  for more modular item creation.
- Introduce `ConfigHelper` for centralized configuration access.
- Implement `ItemModelData` for consistent handling of custom model
  data.
- Create `RecipeRegistrar` to manage conditional recipe registration.
- Refactor `Listeners` to leverage new utility classes and improve
  event handling logic.
- Consolidate multiple smithing table event handlers into a single,
  more generic method.
- Update various parts of the codebase to use the new, more modular
  components.