@@ -1,84 +1,66 @@
 package org.winlogon.combatweaponryplus.items.builders;
 
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.serializer.legacy.LegacyComponentSerializer;
 import org.bukkit.Material;
+import org.bukkit.attribute.Attribute;
+import org.bukkit.attribute.AttributeModifier;
+import org.bukkit.inventory.EquipmentSlotGroup;
 import org.bukkit.inventory.ItemFlag;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.meta.ItemMeta;
-import org.bukkit.inventory.meta.components.CustomModelDataComponent;
+import org.winlogon.combatweaponryplus.util.AttributeModifierUtil;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ItemBuilder {
-    protected Material material;
-    protected String name;
-    protected List<String> lore;
-    protected int customModelData;
-    protected boolean unbreakable;
-    protected boolean hideFlags;
+    protected final ItemStack item;
+    protected final ItemMeta meta;
 
     public ItemBuilder(Material material) {
-        this.material = material;
-        this.customModelData = 0;
-        this.unbreakable = false;
-        this.hideFlags = false;
+        this.item = new ItemStack(material);
+        this.meta = item.getItemMeta();
     }
 
     public ItemBuilder name(String name) {
-        this.name = name;
+        meta.setDisplayName(name);
         return this;
     }
 
     public ItemBuilder lore(String... lore) {
-        this.lore = Arrays.asList(lore);
+        meta.setLore(List.of(lore));
         return this;
     }
 
     public ItemBuilder lore(List<String> lore) {
-        this.lore = lore;
+        meta.setLore(lore);
         return this;
     }
 
     public ItemBuilder customModelData(int customModelData) {
-        this.customModelData = customModelData;
+        meta.setCustomModelData(customModelData);
         return this;
     }
 
     public ItemBuilder unbreakable(boolean unbreakable) {
-        this.unbreakable = unbreakable;
+        meta.setUnbreakable(unbreakable);
         return this;
     }
 
     public ItemBuilder hideFlags(boolean hideFlags) {
-        this.hideFlags = hideFlags;
+        if (hideFlags) {
+            meta.addItemFlags(ItemFlag.values());
+        }
+        return this;
+    }
+
+    public ItemBuilder attribute(Attribute attribute, double value, AttributeModifier.Operation operation, EquipmentSlotGroup slot) {
+        if (value != 0) {
+            AttributeModifier modifier = AttributeModifierUtil.createAttributeModifier(attribute, value, operation, slot);
+            meta.addAttributeModifier(attribute, modifier);
+        }
         return this;
     }
 
     public ItemStack build() {
-        ItemStack item = new ItemStack(material);
-        ItemMeta meta = item.getItemMeta();
-
-        if (name != null) {
-            meta.displayName(LegacyComponentSerializer.legacyAmpersand().deserialize(name));
-        }
-        if (lore != null) {
-            meta.lore(lore.stream().map(line -> LegacyComponentSerializer.legacyAmpersand().deserialize(line)).collect(Collectors.toList()));
-        }
-        if (customModelData != 0) {
-            CustomModelDataComponent customModelDataComponent = meta.getCustomModelDataComponent();
-            customModelDataComponent.setFloats(List.of((float) customModelData));
-            meta.setCustomModelDataComponent(customModelDataComponent);
-        }
-        if (unbreakable) {
-            meta.setUnbreakable(true);
-        }
-        if (hideFlags) {
-            meta.addItemFlags(ItemFlag.HIDE_ATTRIBUTES, ItemFlag.HIDE_ENCHANTS, ItemFlag.HIDE_POTION_EFFECTS, ItemFlag.HIDE_UNBREAKABLE, ItemFlag.HIDE_DYE, ItemFlag.HIDE_ARMOR_TRIM, ItemFlag.HIDE_STORED_ENCHANTS);
-        }
-
         item.setItemMeta(meta);
         return item;
     }
